fix table background on small screen

--- a/public/css/custom.scss
+++ b/public/css/custom.scss
@@ -18,3 +18,7 @@ $pepe-primary:#55883a !default;
 {
     background-color: $pepe-primary !important;
 }
+
+.table {
+    background-color: #303030;
+}
